<resources>
    <!-- HOME -->
    <string name="app_name">SOCCUP</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Une soirée FIFA doit être organisée comme il se doit.</string>

    <!-- CARD -->
    <string name="nbPlayers">Nombre de joueurs</string>
    <string name="nbPlayersByTeam">Joueurs par équipe</string>
    <string name="aleaTeam">Equipes aléatoires</string>
    <string name="randomPageTitle">Nom des joueurs</string>
    <string name="matchHome">Match aller</string>
    <string name="matchAway">Match retour</string>
    <string name="ranking">Classement</string>

    <!-- POP UP -->
    <string name="title_scorer">Qui est le buteur ?</string>
    <string name="title_restart">Quitter ?</string>
    <string name="text_restart">Voulez-vous vraiment recommencer le tournoi ?</string>

    <!-- TITLE PAGE -->
    <string name="title_configuration">Configuration</string>
    <string name="title_equipes">Equipes</string>
    <string name="title_current_match">Tournoi</string>

    <!-- ONGLET -->
    <string name="onglet_current">EN COURS</string>
    <string name="onglet_all">TOUS</string>
    <string name="onglet_classement">CLASSEMENT</string>

    <!-- RANKING -->
    <string name="title_team">Equipe</string>
    <string name="title_nb_match_played">J.</string>
    <string name="title_nb_match_won">G.</string>
    <string name="title_nb_match_drawn">N.</string>
    <string name="title_nb_match_lose">P.</string>
    <string name="title_different_goal">DB.</string>
    <string name="title_nb_points">PTS.</string>
    <string name="best_player">Joueur top</string>
    <string name="bad_player">Joueur flop</string>

    <!-- VICTORY -->
    <string name="victory">Victoire de</string>

    <!-- BUTTON -->
    <string name="begin">Commencer</string>
    <string name="matchNext">Match suivant</string>
    <string name="cancel">Annuler</string>
    <string name="leave">Quitter</string>
    <string name="keep">Continuer</string>
    <string name="stats">Voir les stats</string>
    <string name="restart">Recommencer</string>

    <!-- NAME OF ACTIVITY -->
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="create_random_team">CreateRandomTeam</string>
    <string name="create_manual_team">CreateManualTeam</string>
    <string name="title_activity_render_random_team">RenderRandomTeam</string>
    <string name="title_activity_current_match">CurrentTournament</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_victory">Victory</string>
    <string name="title_activity_current_tournament">CurrentTournamentActivity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_stats">Stats</string>
</resources>
