<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.soccup.CurrentTournament">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:text="@string/title_current_match"
            android:id="@+id/titleCurrentTournament"
            style="@style/title_page" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/menuTournament">

            <TextView
                android:text="@string/onglet_current"
                android:id="@+id/ongletCurrent"
                android:layout_below="@+id/menuTournament"
                style="@style/onglet"
                android:textColor="#FFFFFF"
                android:background="@drawable/border_bottom"/>

            <TextView
                android:text="@string/onglet_all"
                android:id="@+id/ongletAll"
                android:layout_below="@+id/menuTournament"
                style="@style/onglet" />

            <TextView
                android:text="@string/onglet_classement"
                android:id="@+id/ongletClassement"
                android:layout_below="@+id/menuTournament"
                style="@style/onglet" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_content_match"
            android:layout_below="@+id/menuTournament"
            style="@style/layout_page">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentMatch"
                style="@style/card">

                <TextView
                    android:text="@string/matchHome"
                    android:id="@+id/matchHome"
                    style="@style/titleCard" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/matchNext"
            android:id="@+id/titleMatchNext"
            android:layout_below="@+id/layout_content_match"
            style="@style/titleCard" />

        <Button
            style="@style/button_validate"
            android:text="@string/matchNext" android:id="@+id/btnMatchNext"
            android:layout_below="@+id/layout_content_match">
        </Button>

    </LinearLayout>

</RelativeLayout>
