<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content" android:layout_width="fill_parent"
    android:id="@+id/fragmentRank"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageButton android:src="@drawable/arrow_back"
            android:id="@+id/backVictory"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity="left"
            android:background="@null"
            android:padding="15dp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" android:id="@+id/winner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/victory"
                android:id="@+id/victory"
                android:layout_below="@id/imageEnd"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="#ABAECD"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/victory"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="En Avant Guingamp"
                android:textSize="32sp"
                android:id="@+id/teamVictory"
                android:clickable="false"
                android:layout_centerHorizontal="true"
                android:textColor="#00E676"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:background="@drawable/rounded_corner_card"
            android:id="@+id/tableRanking"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp">

            <TableRow>
                <TextView
                    android:text="Classement"
                    android:id="@+id/titleRanking"
                    style="@style/title_card"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:id="@+id/ligneTitle"
                android:layout_below="@+id/titleRanking"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/titleTeam"
                    android:text="@string/title_team"
                    style="@style/title_ranking"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/titleNbMatchPlayed"
                    android:text="@string/title_nb_match_played"
                    style="@style/title_ranking"/>

                <TextView
                    android:id="@+id/titleNbMatchWon"
                    android:text="@string/title_nb_match_won"
                    style="@style/title_ranking"/>

                <TextView
                    android:id="@+id/titleNbMatchDrawn"
                    android:text="@string/title_nb_match_drawn"
                    style="@style/title_ranking"/>

                <TextView
                    android:id="@+id/titleNbMatchLose"
                    android:text="@string/title_nb_match_lose"
                    style="@style/title_ranking"/>

                <TextView
                    android:id="@+id/titleDifferentGoal"
                    android:text="@string/title_different_goal"
                    style="@style/title_ranking"/>

                <TextView
                    android:id="@+id/titleNbMatchPoints"
                    android:text="@string/title_nb_points"
                    style="@style/title_ranking"/>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/bestPlayer"
            android:layout_below="@+id/table_ranking"
            style="@style/card"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:text="@string/best_player"
                android:id="@+id/titleBestPlayer"
                style="@style/title_card"/>

            <TextView
                android:text="Joueur top"
                android:id="@+id/nameBestPlayer"
                android:layout_below="@+id/titleBestPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="left"
                android:textColor="@color/blueDark"
                android:textSize="25dp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="0.3"
                android:layout_height="100dp"
                android:id="@+id/imageTop"
                android:layout_below="@+id/titleBestPlayer"
                android:src="@mipmap/top"
                android:layout_gravity="right"
                android:adjustViewBounds="true"
                android:layout_marginTop="-60dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bad_player"
            android:layout_below="@+id/bestPlayer"
            style="@style/card"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:text="@string/bad_player"
                android:id="@+id/titleBadPlayer"
                style="@style/title_card"/>

            <TextView
                android:text="Joueur flop"
                android:id="@+id/nameBadPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="left"
                android:textColor="@color/blueDark"
                android:textSize="25dp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="0.3"
                android:layout_height="100dp"
                android:id="@+id/imageFlop"
                android:layout_below="@+id/titleBadPlayer"
                android:src="@mipmap/flop"
                android:layout_gravity="right"
                android:adjustViewBounds="true"
                android:layout_marginTop="-50dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>