<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:src="@drawable/landing"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="64sp"
        android:id="@+id/app_name"
        android:clickable="false"
        android:layout_centerHorizontal="true"
        android:textColor="#00E676"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/intro"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#ABAECD"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        android:id="@+id/begin"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:background="#00E676"
        android:textColor="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentStart="false" />

</RelativeLayout>
